<resources>
    <string name="app_name">CignaTask</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="year">Year</string>
    <string name="rated">Rated</string>
    <string name="released">Released</string>
    <string name="season">Season</string>
    <string name="episode">Episode</string>
    <string name="runtime">Runtime</string>

    <string name="networkerror">Please Check Network Connectivity </string>
    <string name="loading">Loading...</string>
    <string name="empty_list">Season list is empty</string>

    <string name="retry">Retry</string>

    <color name="light_blue">#ADD8E6</color>
    <color name="blue">#3399FF</color>

</resources>
